--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -6,19 +6,18 @@ ul {
     background-color: #606060;
 }
 
-ul li {
+ul li{
     float: left;
-}
-
-.link {
     display: block;
-    color: white;
     text-align: center;
     padding: 14px 16px;
+}
+ul li a {
     text-decoration: none;
+    color: white;
+
 }
 
-/* Change the link color to #111 (black) on hover */
-.link:hover {
-    background-color: #111;
+ul li:hover {
+    background-color: darkgray;
 }
