--- a/src/components/DropdownList/Dropdown.module.css
+++ b/src/components/DropdownList/Dropdown.module.css
@@ -1,21 +1,34 @@
 .ul {
+
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
-    right: 0;
-    left: 0;
-    background-color: #ffffff;
+    position: absolute;
+    width: 100%;
+    max-width: 700px;
+    max-height: 300px;
+    z-index: 1;
     list-style-type: none;
+    margin-top: -8px;
+    overflow-y: scroll;
+    background-color: #ffffff;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    max-height: 200px;
 }
 
 ul li {
     padding: 0.5rem 1rem;
     transition-property: background-color, border-color, color, fill, stroke;
     cursor: pointer;
-
 }
 
+img {
+    height: 60px;
+    margin-right: 20px;
+}
+
+.container {
+    display: flex;
+    padding-left: 0;
+    align-items: center;
+}
 
 
