--- a/src/components/FilmItem/FilmItem.module.css
+++ b/src/components/FilmItem/FilmItem.module.css
@@ -1,10 +1,13 @@
 .wrapper {
     width: 400px;
     height: 200px;
-    border: none;
+    border: solid 1px black;
     display: flex;
     margin: 20px 20px 20px 0;
     box-sizing: content-box;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 10px 10px;
 }
 .text_wrapper {
     text-overflow: ellipsis;
